--- a/Restaurant/css/style.css
+++ b/Restaurant/css/style.css
@@ -1,12 +1,32 @@
 
+  h1 {
+    color: whitesmoke;
+    text-align: center;
+    size: 20cm;
+  }
+  h2{
+      color: whitesmoke;
+      text-align: center;
+  }
+  h3{
+    color: whitesmoke;
+    text-align: center;
+}
+  
+  p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+  }
 ul.breadcrumb {
     list-style: none;
-    background-color: #f1f1f1;
-    padding: 20px;
+    background-color:black;
+    padding: 10px 16px;
     text-align: right;
   }
   
+
   /* Display list items side by side */
+  
   ul.breadcrumb li {
     display: inline;
     font-size: 18px;
@@ -16,13 +36,13 @@ ul.breadcrumb {
   /* Add a slash symbol (/) before/behind each list item */
   ul.breadcrumb li+li:before {
     padding: 8px;
-    color: black;
+    color:whitesmoke;
     content: "/\00a0";
   }
   
   /* Add a color to all links inside the list */
   ul.breadcrumb li a {
-    color: #0275d8;
+    color: whitesmoke;
     text-decoration: none;
   }
   
@@ -32,4 +52,363 @@ ul.breadcrumb {
     text-decoration: underline;
   }
   
+  
+  * {
+      box-sizing: border-box;
+      font-family: Raleway;
+      color: #777;
+  }
+  .myDiv {
+    border: 5px outset honeydew;
+    background-color: black;    
+    text-align: center;
+  }
+  
+  .nav ul {
+      margin: 0;
+  }
+  .nav li {
+      display: inline;
+  }
+  .nav a {
+      display: inline-block;
+      padding: .5em;
+      color: white;
+      text-decoration: none;
+  }
+  .main-nav {
+      text-align: center;
+      font-size: 1.1em;
+      font-weight: lighter;
+      border-bottom: 1px solid rgba(255, 255, 255, .3)
+  }
+  .main-nav li {
+      padding: 0 5%;
+  }
+  .nav a:hover {
+      background-color: rgba(255, 255, 255, .3)
+  }
+ 
+  .content-section {
+      margin: 1em;
+  }
+  .container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 1.5em;
+      border: 2px outset white;
+      background-color: black;    
+      text-align: center;
+  }
+  
+  .section-header {
+      font-family: "Metal Mania";
+      font-weight: normal;
+      color: white;
+      text-align: center;
+      font-size: 2.5em;
+  }
+  
+  
+  .main-footer {
+    
+      color: white;
    
+  }
+  .main-footer-container {
+      display: flex;
+      align-items: center;
+  }
+  .main-footer-container ul {
+      flex-grow: 1;
+      text-align: end;
+  }
+  .footer-nav li {
+      padding: 0 .5em;
+  }
+  .footer-nav img {
+      width: 30px;
+      height: 30px;
+  }
+  .btn {
+      text-align: center;
+      vertical-align: middle;
+      padding: .67em .67em;
+      cursor: pointer;
+  }
+  .btn-header {
+      margin: .5em 15% 2em 15%;
+      color: white;
+      border: 2px solid #010a0f;
+      background-color: rgba(255, 255, 255, .1);
+      border-radius: 0;
+      font-size: 1.5em;
+      font-weight: lighter;
+      padding-left: 2em;
+      padding-right: 2em;
+  }
+  .btn-header:hover {
+      background-color: rgba(255, 255, 255, .3);
+  }
+  .btn-play {
+      display: block;
+      margin: 0 auto;
+      color: #2D9CDB;
+      font-size: 4em;
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      padding: 0;
+      text-align: center;
+  }
+  .btn-primary {
+      color: white;
+      background-color: #02080c;
+      border: none;
+      border-radius: .3em;
+      font-weight: bold;
+  }
+  .btn-primary:hover {
+      background-color: #2D9CDB;
+  }
+  
+  .btn-danger {
+      color: white;
+      background-color: #EB5757;
+      border: none;
+      border-radius: .3em;
+      font-weight: bold;
+  }
+  
+  .btn-danger:hover {
+      background-color: #CC4C4C;
+  }
+  
+  .tour-row {
+      border-bottom: 1px solid black;
+      padding-bottom: 1em;
+      margin-bottom: 1em;
+  }
+  .tour-row:last-child {
+      border: none;
+  }
+  .tour-item {
+      display: inline-block;
+      padding-right: .5em;
+  }
+  .tour-date {
+      color: white;
+      width: 11%;
+      font-weight: bold;
+  }
+  .tour-city {
+      width: 24%;
+  }
+  .tour-arena {
+      width: 42%;
+  }
+  .tour-btn {
+      max-width: 19%;
+  }
+  
+  .shop-items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+  }
+  
+  .shop-item {
+      margin: 30px;
+  }
+  
+  .shop-item-title {
+      display: block;
+      width: 100%;
+      text-align: center;
+      font-size: 1.5em;
+      color: white;
+      text-align: center;
+      margin-bottom: 15px;
+  }
+  
+  .shop-item-image {
+      height: 250px;
+  }
+  
+  .shop-item-details {
+      display: flex;
+      padding: 5px;
+      align-items: center;
+      padding: 5px;
+  }
+  
+  .shop-item-price {
+      flex-grow: 1;
+      color: white;
+      font-size: 1em;
+  }
+  
+  .shop-items {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+  }
+  
+  .cart-header {
+      font-weight: bold;
+      font-size: 1.25em;
+      color: white;
+  }
+  
+  .cart-row {
+      display: flex;
+  }
+  
+  .cart-row:last-child {
+      border-bottom: 1px solid black;
+  }
+  
+  .cart-row:last-child .cart-column {
+      border: none;
+  }
+  
+  .cart-column {
+      display: flex;
+      align-items: center;
+      border-bottom: 1px solid black;
+      margin-right: 1.5em;
+      padding-bottom: 10px;
+      margin-top: 10px;
+      border-bottom: 1px solid black;
+  }
+  
+  .cart-row {
+      display: flex;
+  }
+  
+  .cart-item {
+      width: 45%;
+  }
+  .cart-price {
+      width: 20%;
+      font-size: 1.2em;
+      color: white;
+  }
+  .cart-quantity {
+      width: 35%;
+  }
+  .cart-item-title {
+      color: white;
+      margin-left: .5em;
+      font-size: 1.2em;
+  }
+  
+  .cart-item-image {
+      border-radius: 10px;
+      width: 75px;
+      height: auto;
+      border-radius: 10px;
+  }
+  
+  .btn-danger {
+      color: white;
+      background-color: #EB5757;
+      border: none;
+      border-radius: .3em;
+      font-weight: bold;
+  }
+  
+  .btn-danger:hover {
+      background-color: #CC4C4C;
+  }
+  
+  .cart-quantity-input {
+      height: 34px;
+      width: 50px;
+      border-radius: 5px;
+      border: 1px solid #56CCF2;
+      background-color: #eee;
+      color: #333;
+      width: 50px;
+      padding: 0;
+      text-align: center;
+      font-size: 1.2em;
+      margin-right: 25px;
+  }
+  
+  .cart-row:last-child {
+      border-bottom: 1px solid black;
+  }
+  
+  .cart-row:last-child .cart-column {
+      border: none;
+  }
+  
+  .cart-total {
+      text-align: end;
+      margin-right: 10px;
+      margin-top: 10px;
+      margin-right: 10px;
+      color: white;
+  }
+  
+  .cart-total-text {
+      font-weight: bold;
+      font-size: 1.5em;
+      margin-right: 20px;
+      color: white;
+  }
+  .cart-total-price {
+      color: white;
+      font-size: 1.1em;
+  }
+  .btn-purchase {
+      display: block;
+      margin: 40px auto 80px auto;
+      font-size: 1.75em;
+      
+  }
+
+  /*page 2*/
+
+
+/* Style the header */
+.header {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Style the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+
+/* Change color on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+  .column {
+    width: 100%;
+  }
+}
